// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`google 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: google:gemini-3-pro-image 1`] = `
{
  "edit": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Make the sky stormy",
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
  ],
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
  ],
}
`;

exports[`google 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: google:gemini-3.1-flash-image 1`] = `
{
  "edit": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Make the sky stormy",
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-image:generateContent",
    },
  ],
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-image:generateContent",
    },
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-image:generateContent",
    },
  ],
}
`;

exports[`google 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: google:gemini-3.1-flash-lite-image 1`] = `
{
  "edit": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "Make the sky stormy",
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
              {
                "inlineData": {
                  "data": "<base64 image>",
                  "mimeType": "image/png",
                },
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-lite-image:generateContent",
    },
  ],
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-lite-image:generateContent",
    },
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "aspectRatio": "3:4",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-lite-image:generateContent",
    },
  ],
}
`;

exports[`google 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: google:gemini-3-pro-image speeds 1`] = `
{
  "flex": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
        "serviceTier": "flex",
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
  ],
  "priority": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
        "serviceTier": "priority",
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
  ],
  "standard": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3-pro-image:generateContent",
    },
  ],
}
`;

exports[`google 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: google:gemini-3.1-flash-image speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "imageConfig": {
            "imageSize": "1K",
          },
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-image:generateContent",
    },
  ],
}
`;

exports[`google 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: google:gemini-3.1-flash-lite-image speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "contents": [
          {
            "parts": [
              {
                "text": "A red kite over a green hill",
              },
            ],
            "role": "user",
          },
        ],
        "generationConfig": {
          "responseModalities": [
            "IMAGE",
          ],
        },
      },
      "url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-3.1-flash-lite-image:generateContent",
    },
  ],
}
`;

exports[`openai 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: openai:gpt-image-2.5-sunburst 1`] = `
{
  "edit": [
    {
      "body": {
        "form": [
          [
            "model",
            "gpt-image-2.5-sunburst",
          ],
          [
            "prompt",
            "Make the sky stormy",
          ],
          [
            "n",
            "1",
          ],
          [
            "size",
            "1024x1024",
          ],
          [
            "quality",
            "medium",
          ],
          [
            "image[]",
            "<file image-0.png image/png>",
          ],
          [
            "image[]",
            "<file image-1.png image/png>",
          ],
          [
            "image[]",
            "<file image-2.png image/png>",
          ],
        ],
      },
      "url": "https://api.openai.com/v1/images/edits",
    },
  ],
  "inpaint": {
    "op": "inpaint",
  },
  "t2i": [
    {
      "body": {
        "model": "gpt-image-2.5-sunburst",
        "n": 2,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "768x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`openai 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: openai:gpt-image-2.5-flare 1`] = `
{
  "edit": [
    {
      "body": {
        "form": [
          [
            "model",
            "gpt-image-2.5-flare",
          ],
          [
            "prompt",
            "Make the sky stormy",
          ],
          [
            "n",
            "1",
          ],
          [
            "size",
            "1024x1024",
          ],
          [
            "quality",
            "medium",
          ],
          [
            "image[]",
            "<file image-0.png image/png>",
          ],
          [
            "image[]",
            "<file image-1.png image/png>",
          ],
          [
            "image[]",
            "<file image-2.png image/png>",
          ],
        ],
      },
      "url": "https://api.openai.com/v1/images/edits",
    },
  ],
  "inpaint": {
    "op": "inpaint",
  },
  "t2i": [
    {
      "body": {
        "model": "gpt-image-2.5-flare",
        "n": 2,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "768x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`openai 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: openai:gpt-image-2 1`] = `
{
  "edit": [
    {
      "body": {
        "form": [
          [
            "model",
            "gpt-image-2",
          ],
          [
            "prompt",
            "Make the sky stormy",
          ],
          [
            "n",
            "1",
          ],
          [
            "size",
            "1024x1024",
          ],
          [
            "quality",
            "medium",
          ],
          [
            "image[]",
            "<file image-0.png image/png>",
          ],
          [
            "image[]",
            "<file image-1.png image/png>",
          ],
          [
            "image[]",
            "<file image-2.png image/png>",
          ],
        ],
      },
      "url": "https://api.openai.com/v1/images/edits",
    },
  ],
  "inpaint": {
    "op": "inpaint",
  },
  "t2i": [
    {
      "body": {
        "model": "gpt-image-2",
        "n": 2,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "768x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`openai 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: openai:gpt-image-2.5-sunburst speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "model": "gpt-image-2.5-sunburst",
        "n": 1,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "1024x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`openai 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: openai:gpt-image-2.5-flare speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "model": "gpt-image-2.5-flare",
        "n": 1,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "1024x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`openai 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: openai:gpt-image-2 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "model": "gpt-image-2",
        "n": 1,
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "size": "1024x1024",
      },
      "url": "https://api.openai.com/v1/images/generations",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:soul 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/standard",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1235,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/standard",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:soul-v2 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/v2/standard",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1235,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/v2/standard",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:soul-cinema 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/cinema",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1235,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/cinema",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:marketing-studio-image 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:marketing-studio-image-2.5-flare 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/flare",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/flare",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:marketing-studio-image-2.5-sunburst 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/sunburst",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/sunburst",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:grok-imagine-image-2.0 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/xai/grok-imagine-image-2.0",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/xai/grok-imagine-image-2.0",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:recraft-v4.1 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/text-to-image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:recraft-v4.1-utility 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/text-to-image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:recraft-v4.1-pro 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/pro/text-to-image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/pro/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:recraft-v4.1-utility-pro 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/pro/text-to-image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/pro/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:qwen-image-3 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/alibaba/qwen-image-3/text-to-image",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1235,
      },
      "url": "https://api.higgsfield.ai/alibaba/qwen-image-3/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:ideogram-4.0 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "rendering_speed": "DEFAULT",
      },
      "url": "https://api.higgsfield.ai/ideogram/v4.0",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "rendering_speed": "DEFAULT",
      },
      "url": "https://api.higgsfield.ai/ideogram/v4.0",
    },
  ],
}
`;

exports[`higgsfield 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: higgsfield:z-image-turbo 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/z-image/turbo",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1235,
      },
      "url": "https://api.higgsfield.ai/z-image/turbo",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:soul speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "4:3",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/standard",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:soul-v2 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/v2/standard",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:soul-cinema speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "720p",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/higgsfield-ai/soul/cinema",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:marketing-studio-image speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "auto",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:marketing-studio-image-2.5-flare speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "auto",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/flare",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:marketing-studio-image-2.5-sunburst speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "auto",
        "prompt": "A red kite over a green hill",
        "quality": "high",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/marketing-studio/image/sunburst",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:grok-imagine-image-2.0 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "auto",
        "prompt": "A red kite over a green hill",
        "quality": "medium",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/xai/grok-imagine-image-2.0",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:recraft-v4.1 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:recraft-v4.1-utility speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:recraft-v4.1-pro speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/pro/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:recraft-v4.1-utility-pro speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "2k",
      },
      "url": "https://api.higgsfield.ai/recraft/v4.1/utility/pro/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:qwen-image-3 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/alibaba/qwen-image-3/text-to-image",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:ideogram-4.0 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "rendering_speed": "DEFAULT",
      },
      "url": "https://api.higgsfield.ai/ideogram/v4.0",
    },
  ],
}
`;

exports[`higgsfield 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: higgsfield:z-image-turbo speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "resolution": "1k",
        "seed": 1234,
      },
      "url": "https://api.higgsfield.ai/z-image/turbo",
    },
  ],
}
`;

exports[`fake 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: fake:resumable-image 1`] = `
{
  "inpaint": {
    "error": "capability_unsupported",
  },
  "t2i": [
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "size": "1K",
      },
      "url": "https://fake.openfield.invalid/v1/images",
    },
    {
      "body": {
        "aspect_ratio": "3:4",
        "prompt": "A red kite over a green hill",
        "size": "1K",
      },
      "url": "https://fake.openfield.invalid/v1/images",
    },
  ],
}
`;

exports[`fake 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: fake:resumable-image speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "aspect_ratio": "1:1",
        "prompt": "A red kite over a green hill",
        "size": "1K",
      },
      "url": "https://fake.openfield.invalid/v1/images",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:dreamina-seedance-2-5-260628 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-5-260628",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 30,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-5-260628",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-5-260628",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:dreamina-seedance-2-0-260128 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-260128",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 15,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-260128",
        "ratio": "3:4",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-260128",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:dreamina-seedance-2-0-fast-260128 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-fast-260128",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 15,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-fast-260128",
        "ratio": "3:4",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-fast-260128",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:dreamina-seedance-2-0-mini-260615 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-mini-260615",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 15,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-mini-260615",
        "ratio": "3:4",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-mini-260615",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:seedance-1-5-pro-251215 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "seedance-1-5-pro-251215",
        "ratio": "adaptive",
        "resolution": "720p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 12,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "seedance-1-5-pro-251215",
        "ratio": "3:4",
        "resolution": "720p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "seedance-1-5-pro-251215",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:seedance-1-0-pro-250528 1`] = `
{
  "startAndEnd": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "last_frame",
            "type": "image_url",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-250528",
        "ratio": "adaptive",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "startFrame": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 12,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-250528",
        "ratio": "3:4",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-250528",
        "ratio": "16:9",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 20. golden payloads: t2i 3:4 at 1K ×2, edit with 2 references, inpaint with a mask: byteplus:seedance-1-0-pro-fast-251015 1`] = `
{
  "startFrame": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "The kite climbs",
            "type": "text",
          },
          {
            "image_url": {
              "url": "<base64 image/png>",
            },
            "role": "first_frame",
            "type": "image_url",
          },
        ],
        "duration": 12,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-fast-251015",
        "ratio": "3:4",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
  "t2v": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-fast-251015",
        "ratio": "16:9",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:dreamina-seedance-2-5-260628 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-5-260628",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:dreamina-seedance-2-0-260128 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-260128",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:dreamina-seedance-2-0-fast-260128 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-fast-260128",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:dreamina-seedance-2-0-mini-260615 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "dreamina-seedance-2-0-mini-260615",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:seedance-1-5-pro-251215 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "generate_audio": true,
        "model": "seedance-1-5-pro-251215",
        "ratio": "16:9",
        "resolution": "720p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:seedance-1-0-pro-250528 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-250528",
        "ratio": "16:9",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;

exports[`byteplus 24. speed on the wire: golden payloads per sync speed, and cost follows the speed served: byteplus:seedance-1-0-pro-fast-251015 speeds 1`] = `
{
  "standard": [
    {
      "body": {
        "camera_fixed": false,
        "content": [
          {
            "text": "A red kite over a green hill",
            "type": "text",
          },
        ],
        "duration": 5,
        "execution_expires_after": 7200,
        "model": "seedance-1-0-pro-fast-251015",
        "ratio": "16:9",
        "resolution": "1080p",
        "return_last_frame": true,
        "seed": 1234,
        "watermark": false,
      },
      "url": "https://ark.ap-southeast.bytepluses.com/api/v3/contents/generations/tasks",
    },
  ],
}
`;
